# heracles

./: .commitlint.rules.js  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.bib  CONTRIBUTING.md  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/: test-constraints.txt
.github/workflows/: pull_request.yml  pull_request_review.yml  release.yml  test.yml  tests.yml
docs/: api.md  conf.py  getting-started.rst  index.rst  make.bat  publications.rst  releases.rst
docs/api/: catalog.rst  examples.rst  fields.rst  index.rst  reference.rst  twopoint.rst
docs/cli/: index.rst
docs/manual/: examples.rst  index.rst  installation.rst  license.rst  releases.rst
docs/reference/: cli.rst  core.rst  covariance.rst  fields.rst  index.rst  io.rst  plot.rst  progress.rst  twopoint.rst
docs/reference/catalog/: array.rst  base.rst  filters.rst  fits.rst  index.rst
docs/source/: conf.py  heracles.maps.rst  index.rst  modules.rst
docs/user/: definitions.rst  get-in-touch.rst  how-heracles-works.rst  index.rst  publications.rst
examples/: discrete.ipynb  example.ipynb  example_covariance.ipynb  example_shrinkage.ipynb  gaussian-covariance.ipynb  gaussian_covariance.ipynb  helpers.py  heracles.cfg  heracles.toml  heracles.yaml  jackknife-covariance.ipynb  jackknife_example.ipynb  outlier_patch_test.ipynb  tr1_outlier_analysis.ipynb  unmixing.ipynb
heracles/: __init__.py  __main__.py  _cofunctions.py  _kmeans_radec.py  _mapping.py  catalog.py  cli.py  config.py  core.py  covariance.py  ducc.py  fields.py  healpy.py  io.py  jackknife.py  logging.py  mapper.py  mapping.py  maps.py  notebook.py  parameters.py  plot.py  progress.py  result.py  rich.py  transforms.py  twopoint.py  unmixing.py  util.py  utils.py
heracles/catalog/: __init__.py  array.py  base.py  filters.py  fits.py
heracles/dices/: __init__.py  bias_correction.py  bias_corrrection.py  cls.py  delete1.py  delete2.py  dices.py  io.py  jackknife.py  mask_correction.py  master.py  polspice.py  shrinkage.py  utils.py  utils_cl.py  utils_polspice.py  utils_sh.py
heracles/maps/: __init__.py  _healpix.py  _mapper.py  _mapping.py
make_docs/source/: heracles.catalog.rst  heracles.rst
tests/: conftest.py  test_catalog.py  test_cli.py  test_config.py  test_core.py  test_covariance.py  test_dices.py  test_ducc.py  test_fields.py  test_healpy.py  test_io.py  test_jackknife.py  test_kmeans_radec.py  test_mapping.py  test_maps.py  test_parameters.py  test_plot.py  test_result.py  test_transforms.py  test_twopoint.py  test_unmixing.py  test_util.py  test_utils.py  test_utils_cl.py  test_utils_polspice.py
tests/data/: jkmap.fits  params_test.yaml
