[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-vcs",
    "hatchling",
]

[project]
authors = [
    {email = "n.tessore@ucl.ac.uk", name = "Nicolas Tessore"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "convolvecl <= 2022.5.10",
    "coroutines <= 0.3.0",
    "fitsio <= 1.2.5",
    "healpy <= 1.17.3",
    "numba <= 0.610",
    "numpy <= 2.1.3",
    "scipy <= 1.15.2",
]
description = "Harmonic-space statistics on the sphere"
dynamic = [
    "version",
]
license = "LGPL-3.0-or-later"
name = "heracles"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
all = [
    "ducc0",
    "rich",
]
docs = [
    "furo",
    "ipython",
    "matplotlib",
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-katex",
]
test = [
    "ducc0",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures",
]

[project.scripts]
heracles = "heracles.cli:main"

[project.urls]
Documentation = "https://heracles.readthedocs.io/"
Homepage = "https://github.com/heracles-ec/heracles"
Issues = "https://github.com/heracles-ec/heracles/issues"

[tool.hatch]
build.hooks.vcs.version-file = "heracles/_version.py"
version.source = "vcs"

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.ruff]
include = ["heracles/**/*.py", "pyproject.toml", "tests/**/*.py"]
target-version = "py39"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
